vm args